--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
         
     </div>
     
-    <script src="/assets/catalogp/index.js"></script> 
+    <script src="index.js"></script> 
 </body>
 </html>
